<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ArcIR_RGB_DetachActivity">

    <LinearLayout
        android:id="@+id/dual_camera_ll_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="visible">

            <TextureView
                android:id="@+id/dual_camera_texture_preview_rgb"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.arcFace.widget.FaceRectView
                android:id="@+id/dual_camera_face_rect_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="gone">

            <TextureView
                android:id="@+id/dual_camera_texture_previewIr"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.arcFace.widget.FaceRectView
                android:id="@+id/dual_camera_face_rect_viewIr"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </FrameLayout>

    </LinearLayout>

    <Switch
        android:id="@+id/dual_camera_switch_liveness_detect"
        android:layout_width="@dimen/dp_110"
        android:layout_height="@dimen/dp_60"
        android:layout_gravity="bottom"
        android:layout_margin="20dp"
        android:text="@string/arc_liveness_detect"
        android:textSize="@dimen/sp_16" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_70"
            android:onClick="register"
            android:text="@string/arc_register"
            android:textSize="@dimen/sp_16" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="drawIrRectHorizontalMirror"
            android:text="@string/arc_draw_ir_rect_mirror_horizontal"
            android:textSize="@dimen/sp_16"
            android:visibility="gone" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="drawIrRectVerticalMirror"
            android:text="@string/arc_draw_ir_rect_mirror_vertical"
            android:textSize="@dimen/sp_16"
            android:visibility="gone" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/dual_camera_recycler_view_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/statusTip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_100"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_50"
        android:gravity="center"
        android:inputType="textMultiLine"
        android:textColor="@color/green_7"
        android:textSize="@dimen/arc_sp_34"
        android:textStyle="bold" />


</FrameLayout>