<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ArcMainActivity">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/batchFaceRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_150"
        android:layout_marginEnd="@dimen/dp_30"
        android:background="@drawable/dialog_btn_bg"
        android:gravity="center"
        android:onClick="batchFaceRegister"
        android:padding="@dimen/dp_15"
        android:text="@string/arc_batch_register"
        android:textColor="@color/black_0"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        android:visibility="visible" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/skipRgb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/batchFaceRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_30"
        android:background="@drawable/dialog_btn_bg"
        android:gravity="center"
        android:onClick="jumpToRGB"
        android:padding="@dimen/dp_15"
        android:text="@string/arc_skip_rgb_activity"
        android:textColor="@color/black_0"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/skipIr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/skipRgb"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_30"
        android:background="@drawable/dialog_btn_bg"
        android:gravity="center"
        android:onClick="jumpToIR_RGB"
        android:padding="@dimen/dp_15"
        android:text="@string/arc_skip_rgb_ir_activity"
        android:textColor="@color/black_0"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/skipIr"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_30"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/searchCondition"
            android:layout_width="@dimen/dp_200"
            android:layout_height="@dimen/dp_50"
            android:ellipsize="end"
            android:gravity="center"
            android:hint="请输入用户姓名"
            android:maxLength="8"
            android:padding="@dimen/dp_10"
            android:textColor="@color/green_7"
            android:textSize="@dimen/sp_18" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/checkOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_btn_bg"
            android:gravity="center"
            android:onClick="checkOut"
            android:padding="@dimen/dp_15"
            android:text="@string/check_out"
            android:textColor="@color/black_0"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold" />
    </LinearLayout>

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/resultIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_20"
        android:scaleType="centerCrop" />

</RelativeLayout>